# dioxus-use-js

./: Cargo.toml  README.md  x.js
.devcontainer/: devcontainer.json
dioxus-use-js/: Cargo.toml  README.md
dioxus-use-js-impl/: Cargo.toml
dioxus-use-js-impl/src/: lib.rs
dioxus-use-js-macro/: Cargo.toml  README.md
dioxus-use-js-macro/src/: lib.rs
dioxus-use-js/src/: build.rs  compile.rs  lib.rs  wrapped_channel.js  wrapped_channel.ts
example/: Cargo.toml  README.md  build.rs
example/assets/: example.js  example.js.map
example/js-utils/src/: example.ts  exports.ts
example/src/: dropping_component.rs  main.rs
example/ts/: example.ts
