[package]
name = "dioxus-use-js-macro"
version = "0.2.0-alpha.7"
authors = ["Dillon Henry McMahon"]
edition = "2024"
description = "A macro that generates Rust bindings to JavaScript or TypeScript functions, with compile time checks. For use with Dioxus."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcmah309/dioxus-use-js"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
swc_ecma_parser = { version = "19.0.0", default-features = false }
swc_ecma_ast = { version = "13.0.0", default-features = false }
swc_ecma_visit = { version = "13.0.0", default-features = false }
swc_common = { version = "13.0.2", default-features = false }

[dev-dependencies]
dioxus = "0.7.0-alpha.2"
serde = "1.0"
serde_json = "1.0"

