[package]
name = "dioxus-use-js"
version = "0.2.0-alpha.6"
authors = ["Dillon Henry McMahon"]
edition = "2024"
description = "A macro that generates Rust bindings to JavaScript or TypeScript functions, with compile time checks. For use with Dioxus."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcmah309/dioxus-use-js"


[dependencies]
dioxus-use-js-macro = { version = "=0.2.0-alpha.6", path = "../dioxus-use-js-macro" }
dioxus = { version = "0.7.0-alpha.3" }
serde = { version = "1" }
serde_json = { version = "1" }
