[package]
name = "dioxus-use-js"
version = "0.3.0"
authors = ["Dillon Henry McMahon"]
edition = "2024"
description = "A macro that generates Rust bindings to JavaScript or TypeScript functions, with compile time checks. For use with Dioxus."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcmah309/dioxus-use-js"


[dependencies]
dioxus-use-js-macro = { version = "=0.3.0", path = "../dioxus-use-js-macro" }
dioxus = { version = "0.7.0", default-features = false, features = [
    "lib",
    "logger",
] }
serde = { version = "1" }
serde_json = { version = "1" }

bon = { version = "3", optional = true }

[features]
# Adds convenience build runners for js/ts projects to use in build.rs
build = ["dep:bon"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
