[package]
name = "example"
version = "0.1.0"
authors = ["mcmah309 <dillonmcmahon79@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-use-js = { path = ".." }
dioxus = { version = "0.7.0-alpha.2", features = [] }
serde_json = "1"
serde = "1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
