[package]
publish = false
name = "example"
authors = ["mcmah309 <dillonmcmahon79@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-use-js = { path = "../dioxus-use-js" }
dioxus = { version = "0.7.0" }
serde_json = "1"

[build-dependencies]
dioxus-use-js = { path = "../dioxus-use-js", features = ["build"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
